# subalfred

./: .gitignore  Cargo.toml  README.md  build.rs  rust-toolchain.toml  tea.yaml
.github/: dependabot.yml
.github/workflows/: checks.yml  ci.yml  pages.yml  release.yml  staging.yml
.maintain/: release.sh
array-bytes/: Cargo.toml
array-bytes/src/: lib.rs
doc/: book.toml
doc/src/: SUMMARY.md
example/util/: Cargo.toml
examples/: Cargo.toml
examples/state/: Cargo.toml
examples/util/: Cargo.toml
examples/util/src/: lib.rs
githuber/: Cargo.toml
githuber/src/: lib.rs  util.rs
githuber/src/requests/commits/: get_a_commit.rs  list_commits.rs  list_pull_requests_associated_with_a_commit.rs
githuber/src/requests/contents/: get_repository_content.rs  mod.rs
githuber/src/requests/issues/: create_an_issue.rs  mod.rs
githuber/src/requests/releases/: list_releases.rs
githuber/src/requests/repositories/: list_repository_tags.rs
githuber/src/responses/: commits.rs  mod.rs  releases.rs  repositories.rs
githubman/: Cargo.toml
githubman/src/: lib.rs  pager.rs  util.rs
githubman/src/action/commits/: list_commits.rs  list_pull_requests_associated_with_a_commit.rs
githubman/src/requests/: mod.rs
githubman/src/requests/commits/: get_a_commit.rs  list_commits.rs  list_pull_requests_associated_with_a_commit.rs  mod.rs
githubman/src/requests/contents/: get_repository_content.rs
githubman/src/requests/issues/: create_an_issue.rs
githubman/src/requests/releases/: list_releases.rs  mod.rs
githubman/src/requests/repositories/: list_repository_tags.rs  mod.rs
githubman/src/responses/: commits.rs  contents.rs  mod.rs  tags.rs
lib/core/: Cargo.toml
lib/core/src/: lib.rs
lib/core/src/cargo/: mod.rs  test.rs  test_data.rs  util.rs
lib/core/src/check/: mod.rs  runtime.rs
lib/core/src/check/features/: mod.rs  test.rs
lib/core/src/check/features/mock-runtime/: Cargo.toml
lib/core/src/check/features/mock-runtime/general/a/: Cargo.toml
lib/core/src/check/features/mock-runtime/general/b/: Cargo.toml
lib/core/src/check/features/mock-runtime/general/c/: Cargo.toml
lib/core/src/check/features/mock-runtime/general/d/: Cargo.toml
lib/core/src/check/features/mock-runtime/general/e/: Cargo.toml
lib/core/src/check/features/mock-runtime/pallet/a/: Cargo.toml
lib/core/src/check/features/mock-runtime/pallet/b/: Cargo.toml
lib/core/src/check/features/mock-runtime/pallet/c/: Cargo.toml
lib/core/src/check/features/mock-runtime/pallets/a/: Cargo.toml
lib/core/src/check/features/mock-runtime/primitive/a/: Cargo.toml
lib/core/src/check/features/mock-runtime/primitive/b/: Cargo.toml
lib/core/src/check/features/mock-runtime/primitive/c/: Cargo.toml
lib/core/src/check/features/mock-runtime/primitives/a/: Cargo.toml
lib/core/src/check/features/mock-runtime/primitives/b/: Cargo.toml
lib/core/src/check/features/mock-runtime/primitives/c/: Cargo.toml
lib/core/src/error/: mod.rs
lib/core/src/github/: mod.rs  substrate.rs  test.rs
lib/core/src/http/: mod.rs
lib/core/src/jsonrpc/: mod.rs
lib/core/src/jsonrpc/http/: mod.rs  test.rs
lib/core/src/jsonrpc/ws/: mod.rs
lib/core/src/key/: keystore.rs  mod.rs
lib/core/src/node/: mod.rs  test.rs
lib/core/src/ss58/: mod.rs  test.rs
lib/core/src/state/: diff.rs  export.rs  fork_off.rs  insert.rs  mod.rs  override.rs
lib/core/src/state/test/: mock-chain-spec.json  mod.rs
lib/core/src/substrate_client/: api.rs  mod.rs
lib/core/src/system/: mod.rs  test.rs
lib/util/: Cargo.toml
lib/util/src/: lib.rs
rpcer/: Cargo.toml
rpcer/src/: lib.rs
src/: config.rs  main.rs  node.rs  substrate.rs  util.rs
src/cli/: Cargo.toml  args.rs  mod.rs
src/cli/src/: args.rs  lib.rs
src/cli/src/subcommand/: account.rs  hash.rs  mod.rs  rpc.rs  storage_key.rs  tags.rs
src/cli/src/subcommand/check/: default_features.rs  mod.rs  node.rs
src/cli/subcommand/: account.rs  hash.rs  mod.rs  rpc.rs  storage_key.rs  tags.rs
src/cli/subcommand/ci/: default_features.rs  mod.rs  node.rs  storage_prefix.rs
src/executor/: Cargo.toml
src/executor/src/: crypto.rs  lib.rs  node.rs
src/executor/src/checker/: default_features.rs  mod.rs  runtime.rs
src/executor/src/config/: mod.rs  template.rs
src/subalfred/: lib.rs  util.rs
src/substrate/: crypto.rs  github.rs  hash.rs  hashing.rs  mod.rs  node.rs  storage.rs  template.rs
subcryptor/: Cargo.toml
subcryptor/src/: lib.rs
subgrandpa/: Cargo.toml
subgrandpa/src/: lib.rs
subhasher/: Cargo.toml
subhasher/src/: lib.rs
submetadatan/: Cargo.toml
submetadatan/src/: lib.rs
subrpcer/: Cargo.toml
subrpcer/impl/: Cargo.toml
subrpcer/impl/src/: lib.rs
subrpcer/src/: author.rs  chain.rs  grandpa.rs  lib.rs  offchain.rs  state.rs  system.rs
subrpcer/src/client/: i.rs  mod.rs  u.rs
substorager/: Cargo.toml
substorager/src/: lib.rs
substrate-minimal/subcryptor/: Cargo.toml
substrate-minimal/subcryptor/src/: error.rs  lib.rs  test.rs
substrate-minimal/subgrandpa/: Cargo.toml
substrate-minimal/subhasher/: Cargo.toml
substrate-minimal/subhasher/src/: lib.rs  test.rs
substrate-minimal/submetadatan/: Cargo.toml
substrate-minimal/submetadatan/src/: error.rs  lib.rs
substrate-minimal/subrpcer/: Cargo.toml
substrate-minimal/subrpcer/impl/: Cargo.toml
substrate-minimal/subrpcer/impl/src/: lib.rs
substrate-minimal/subrpcer/src/: author.rs  babe.rs  chain.rs  grandpa.rs  lib.rs  net.rs  offchain.rs  payment.rs  rpc.rs  state.rs  system.rs
substrate-minimal/subrpcer/src/client/: mod.rs  r.rs  u.rs
substrate-minimal/subruntimer/: Cargo.toml
substrate-minimal/subruntimer/src/: lib.rs
substrate-minimal/subspector/: Cargo.toml
substrate-minimal/subspector/src/: lib.rs
substrate-minimal/substorager/: Cargo.toml
substrate-minimal/substorager/src/: lib.rs  test.rs
substrate-minimal/subversion/: Cargo.toml
substrate-minimal/subversion/src/: lib.rs
substrate-minimal/subversioner/: Cargo.toml
substrate-minimal/subversioner/src/: lib.rs
substrate-rpc-api/: Cargo.toml
substrate-rpc-api/src/: chain.rs  lib.rs  state.rs
(+91 files in other folders)
