[workspace]
members = [
	"bin/*",
	"bin/subalfred/src/command/impl",
	"lib/*",
]
resolver = "2"

[workspace.package]
authors    = ["Xavier Lau <xavier@inv.cafe>"]
edition    = "2021"
homepage   = "https://hack.ink/subalfred"
license    = "GPL-3.0"
repository = "https://github.com/hack-ink/subalfred"
version    = "0.9.3"

[workspace.dependencies]
# crates.io
array-bytes        = { version = "6.2" }
clap               = { version = "4.5" }
fxhash             = { version = "0.2" }
once_cell          = { version = "1.20" }
parity-scale-codec = { version = "3.6" }
reqwest            = { version = "0.12" }
serde              = { version = "1.0" }
serde_json         = { version = "1.0" }
thiserror          = { version = "1.0" }
tokio              = { version = "1.41" }
tracing            = { version = "0.1" }
# hack-ink
subcryptor   = { version = "0.11", git = "https://github.com/hack-ink/substrate-minimal" }
subhasher    = { version = "0.11", git = "https://github.com/hack-ink/substrate-minimal" }
submetadatan = { version = "0.11", git = "https://github.com/hack-ink/substrate-minimal" }
subrpcer     = { version = "0.11", git = "https://github.com/hack-ink/substrate-minimal" }
subruntimer  = { version = "0.11", git = "https://github.com/hack-ink/substrate-minimal" }
subspector   = { version = "0.11", git = "https://github.com/hack-ink/substrate-minimal" }
substorager  = { version = "0.11", git = "https://github.com/hack-ink/substrate-minimal" }
subversioner = { version = "0.11", git = "https://github.com/hack-ink/substrate-minimal" }
# subalfred
cmd-impl       = { version = "0.9", path = "bin/subalfred/src/command/impl" }
subalfred-core = { version = "0.9", path = "lib/core" }
subalfred-util = { version = "0.9", path = "lib/util" }

# [patch.'https://github.com/hack-ink/substrate-minimal']
# # hack-ink
# subcryptor   = { path = "../substrate-minimal/subcryptor" }
# subhasher    = { path = "../substrate-minimal/subhasher" }
# submetadatan = { path = "../substrate-minimal/submetadatan" }
# subrpcer     = { path = "../substrate-minimal/subrpcer" }
# subruntimer  = { path = "../substrate-minimal/subruntimer" }
# subspector   = { path = "../substrate-minimal/subspector" }
# substorager  = { path = "../substrate-minimal/substorager" }
# subversioner = { path = "../substrate-minimal/subversioner" }

[profile.ci-dev]
incremental = false
inherits    = "dev"

[profile.ci-release]
inherits = "release"
lto      = true
