[package]
authors     = ["Xavier Lau <c.estlavie@icloud.com>"]
description = "array-bytes"
edition     = "2018"
homepage    = "https://array-bytes.l2ust.world/"
license     = "GPL-3.0"
name        = "array-bytes"
readme      = "README.md"
repository  = "https://github.com/l2ust/array-bytes/"
version     = "0.3.0"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
# thiserror = { version = "1.0.22" }
