[package]
authors     = ["Xavier Lau <c.estlavie@icloud.com>"]
description = "githuber"
edition     = "2018"
homepage    = "https://githuber.l2ust.world/"
license     = "GPL-3.0"
name        = "githuber"
readme      = "README.md"
repository  = "https://github.com/l2ust/githuber/"
version     = "0.1.0"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
derive_builder = { version = "0.9.0" }
isahc          = { version = "0.9.14" }
serde          = { version = "1.0.118", features = ["derive"] }
serde_json     = { version = "1.0.60" }
tracing        = { version = "0.1.22" }
