[package]
authors     = ["Xavier Lau <c.estlavie@icloud.com>"]
description = "rpcer"
edition     = "2018"
homepage    = "https://rpcer.l2ust.world/"
license     = "GPL-3.0"
name        = "rpcer"
readme      = "README.md"
repository  = "https://github.com/l2ust/rpcer/"
version     = "0.1.0"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
