[package]
authors     = ["Xavier Lau <c.estlavie@icloud.com>"]
description = "subcryptor"
edition     = "2018"
homepage    = "https://subcryptor.l2ust.world"
license     = "GPL-3.0"
name        = "subcryptor"
readme      = "README.md"
repository  = "https://github.com/l2ust/subcryptor"
version     = "0.1.3"

[badges]
maintenance = { status = "actively-developed" }

[features]
codec       = ["parity-scale-codec"]
full-crypto = ["schnorrkel"]

[dependencies]
base58             = { version = "0.1.0" }
blake2-rfc         = { version = "0.2.18" }
parity-scale-codec = { version = "2.0.1", optional = true, features = ["derive"] }
schnorrkel         = { version = "0.10.1", optional = true }
