[package]
authors     = ["Xavier Lau <c.estlavie@icloud.com>"]
description = "subcryptor"
edition     = "2018"
homepage    = "https://subcryptor.l2ust.world"
license     = "GPL-3.0"
name        = "subcryptor"
readme      = "README.md"
repository  = "https://github.com/l2ust/subalfred"
version     = "0.2.2"

[badges]
maintenance = { status = "actively-developed" }

[features]
codec       = ["parity-scale-codec"]
full-crypto = ["schnorrkel"]

[dependencies]
base58             = { version = "0.2" }
blake2-rfc         = { version = "0.2" }
parity-scale-codec = { version = "2.3", optional = true, features = ["derive"] }
schnorrkel         = { version = "0.10", optional = true }
