[package]
authors     = ["Xavier Lau <c.estlavie@icloud.com>"]
description = "subgrandpa"
edition     = "2018"
homepage    = "https://subalfred.l2ust.world"
license     = "GPL-3.0"
name        = "subgrandpa"
readme      = "README.md"
repository  = "https://github.com/l2ust/subalfred"
version     = "0.2.6"

[badges]
maintenance = { status = "actively-developed" }

[features]
codec = ["parity-scale-codec"]

[dependencies]
parity-scale-codec = { version = "2.2.0", optional = true, features = ["derive"] }
serde              = { version = "1.0.127", optional = true, features = ["derive"] }
