[package]
authors     = ["Xavier Lau <xavier@inv.cafe>"]
description = "subgrandpa"
edition     = "2018"
homepage    = "https://subalfred.hack.ink"
license     = "GPL-3.0"
name        = "subgrandpa"
readme      = "README.md"
repository  = "https://github.com/hack-ink/subalfred"
version     = "0.7.0"

[badges]
maintenance = { status = "actively-developed" }

[features]
codec = [
	# crates.io
	"parity-scale-codec",
]

[dependencies]
# crates.io
parity-scale-codec = { version = "2.3", optional = true, features = ["derive"] }
serde              = { version = "1.0", optional = true, features = ["derive"] }
