[package]
authors     = ["Xavier Lau <c.estlavie@icloud.com>"]
description = "subhasher"
edition     = "2018"
homepage    = "https://subalfred.l2ust.world"
license     = "GPL-3.0"
name        = "subhasher"
readme      = "README.md"
repository  = "https://github.com/l2ust/subalfred"
version     = "0.1.7"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = [
	"std",
]

std = [
	"blake2-rfc/std",
	"byteorder/std",
	"sha2/std",
	"twox-hash/std",
]

[dependencies]
blake2-rfc  = { version = "0.2.18", default-features = false }
byteorder   = { version = "1.4.3", default-features = false }
sha2        = { version = "0.9.5", default-features = false }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
twox-hash   = { version = "1.6.0", default-features = false }
