[package]
authors     = ["Xavier Lau <hi@xavier.zone>"]
description = "submetadatan"
edition     = "2018"
homepage    = "https://subalfred.l2ust.world"
license     = "GPL-3.0"
name        = "submetadatan"
readme      = "README.md"
repository  = "https://github.com/l2ust/subalfred"
version     = "0.5.4"

[badges]
maintenance = { status = "actively-developed" }

[features]
codec = [
	"parity-scale-codec",
	"substorager/codec",
]

simple = ["thiserror"]

[dependencies]
parity-scale-codec = { version = "2.3", optional = true, features = ["derive"] }
substorager        = { version = "0.3" }
thiserror          = { version = "1.0", optional = true }
