[package]
authors     = ["Xavier Lau <xavier@inv.cafe>"]
description = "submetadatan"
edition     = "2021"
homepage    = "https://subalfred.hack.ink"
license     = "GPL-3.0"
name        = "submetadatan"
readme      = "README.md"
repository  = "https://github.com/hack-ink/subalfred"
version     = "0.6.0"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
# crates.io
frame-metadata = { version = "14.2", features = ["v14"] }
scale-info     = { version = "1.0" }
thiserror      = { version = "1.0" }
