[package]
authors     = ["Xavier Lau <c.estlavie@icloud.com>"]
description = "subrpcer"
edition     = "2018"
homepage    = "https://subalfred.l2ust.world"
license     = "GPL-3.0"
name        = "subrpcer"
readme      = "README.md"
repository  = "https://github.com/l2ust/subalfred"
version     = "0.4.0"

[badges]
maintenance = { status = "actively-developed" }

[features]
isahc-client = [
	"isahc",
	"thiserror",
	"tracing",
]
raw-params = []
ureq-client = [
	"ureq",
	"thiserror",
	"tracing",
]

[dependencies]
isahc         = { version = "1.5.0", optional = true, features = ["json"] }
serde         = { version = "1.0.130" }
serde_json    = { version = "1.0.68" }
subrpcer-impl = { version = "0.1.2" }
thiserror     = { version = "1.0.29", optional = true }
tracing       = { version = "0.1.28", optional = true }
ureq          = { version = "2.2.0", optional = true, features = ["json"] }
