[package]
authors     = ["Xavier Lau <hi@xavier.zone>"]
description = "subrpcer"
edition     = "2018"
homepage    = "https://subalfred.l2ust.world"
license     = "GPL-3.0"
name        = "subrpcer"
readme      = "README.md"
repository  = "https://github.com/l2ust/subalfred"
version     = "0.4.4"

[badges]
maintenance = { status = "actively-developed" }

[features]
raw-params = []

isahc-client = [
	"isahc",
	"thiserror",
	"tracing",
]
ureq-client = [
	"ureq",
	"thiserror",
	"tracing",
]

[dependencies]
isahc         = { version = "1.5", optional = true, features = ["json"] }
serde         = { version = "1.0" }
serde_json    = { version = "1.0" }
subrpcer-impl = { version = "0.1" }
thiserror     = { version = "1.0", optional = true }
tracing       = { version = "0.1", optional = true }
ureq          = { version = "2.3", optional = true, features = ["json"] }
