[package]
authors     = ["Xavier Lau <xavier@inv.cafe>"]
description = "subrpcer"
edition     = "2021"
homepage    = "https://subalfred.hack.ink"
license     = "GPL-3.0"
name        = "subrpcer"
readme      = "README.md"
repository  = "https://github.com/hack-ink/subalfred"
version     = "0.5.0"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
# crates.io
isahc      = { version = "1.5", optional = true, features = ["json"] }
serde      = { version = "1.0" }
serde_json = { version = "1.0" }
thiserror  = { version = "1.0", optional = true }
tracing    = { version = "0.1", optional = true }
ureq       = { version = "2.3", optional = true, features = ["json"] }
# hack-ink
subrpcer-impl = { version = "0.2", path = "impl" }

[features]
raw-params = []

isahc-client = [
	# crates.io
	"isahc",
	"thiserror",
	"tracing",
]
ureq-client = [
	# crates.io
	"ureq",
	"thiserror",
	"tracing",
]
