[package]
authors     = ["Xavier Lau <c.estlavie@icloud.com>"]
description = "substorager"
edition     = "2018"
homepage    = "https://subalfred.l2ust.world"
license     = "GPL-3.0"
name        = "substorager"
readme      = "README.md"
repository  = "https://github.com/l2ust/subalfred"
version     = "0.3.0"

[badges]
maintenance = { status = "actively-developed" }

[features]
codec = ["parity-scale-codec"]

[dependencies]
array-bytes        = { version = "1.4.0" }
parity-scale-codec = { version = "2.3.0", optional = true, features = ["derive"] }
subhasher          = { version = "0.1.7" }
