[package]
authors     = ["Xavier Lau <xavier@inv.cafe>"]
description = "substorager"
edition     = "2018"
homepage    = "https://subalfred.hack.ink"
license     = "GPL-3.0"
name        = "substorager"
readme      = "README.md"
repository  = "https://github.com/hack-ink/subalfred"
version     = "0.7.0"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
# crates.io
array-bytes        = { version = "1.5" }
parity-scale-codec = { version = "2.3", optional = true, features = ["derive"] }
# hack-ink
subhasher = { version = "0.7", path = "../subhasher" }

[features]
codec = [
	# crates.io
	"parity-scale-codec",
]
