[package]
authors     = ["Xavier Lau <xavier@inv.cafe>"]
description = "Subalfred example - util"
edition     = "2021"
homepage    = "https://subalfred.hack.ink"
license     = "GPL-3.0"
name        = "se-util"
readme      = "README.md"
repository  = "https://github.com/hack-ink/subalfred"
version     = "0.0.0"
