[package]
authors     = ["Xavier Lau <xavier@inv.cafe>"]
description = "subalfred-state-example"
edition     = "2021"
homepage    = "https://subalfred.hack.ink"
license     = "GPL-3.0"
name        = "subalfred-state-example"
readme      = "README.md"
repository  = "https://github.com/hack-ink/subalfred"
version     = "0.0.0"
