[package]
authors     = ["Xavier Lau <xavier@inv.cafe>"]
description = "Subalfred core libraries."
edition     = "2021"
homepage    = "https://subalfred.hack.ink"
license     = "GPL-3.0"
name        = "subalfred-core"
readme      = "README.md"
repository  = "https://github.com/hack-ink/subalfred"
version     = "0.9.0-rc13"

[dependencies]
# crates.io
array-bytes        = { version = "4.1" }
async-trait        = { version = "0.1" }
cargo_metadata     = { version = "0.15" }
cargo_toml         = { version = "0.13" }
clap               = { version = "4.0", optional = true, features = ["derive", "wrap_help"] }
futures            = { version = "0.3" }
fxhash             = { version = "0.2" }
once_cell          = { version = "1.15" }
parity-scale-codec = { version = "3.2" }
regex              = { version = "1.6" }
reqwest            = { version = "0.11", features = ["json"] }
serde              = { version = "1.0" }
serde_json         = { version = "1.0" }
thiserror          = { version = "1.0" }
tokio              = { version = "1.21", features = ["fs", "macros", "rt-multi-thread"] }
tokio-stream       = { version = "0.1" }
tokio-tungstenite  = { version = "0.17", features = ["rustls-tls-native-roots"] }
tracing            = { version = "0.1" }
# hack-ink
subalfred-util = { version = "0.9.0-rc13", path = "../util" }
subcryptor     = { version = "0.9.0-rc13", path = "../../substrate-minimal/subcryptor" }
subhasher      = { version = "0.9.0-rc13", path = "../../substrate-minimal/subhasher" }
submetadatan   = { version = "0.9.0-rc13", path = "../../substrate-minimal/submetadatan" }
subrpcer       = { version = "0.9.0-rc13", path = "../../substrate-minimal/subrpcer" }
subruntimer    = { version = "0.9.0-rc13", path = "../../substrate-minimal/subruntimer", features = ["serde"] }
substorager    = { version = "0.9.0-rc13", path = "../../substrate-minimal/substorager" }
subversioner   = { version = "0.9.0-rc13", path = "../../substrate-minimal/subversioner", features = ["serde"] }
