[package]
authors.workspace    = true
description          = "Subalfred core libraries."
edition.workspace    = true
homepage.workspace   = true
license.workspace    = true
name                 = "subalfred-core"
readme               = "README.md"
repository.workspace = true
version.workspace    = true

[dependencies]
# crates.io
array-bytes        = { workspace = true }
async-trait        = { version = "0.1" }
cargo_metadata     = { version = "0.18" }
cargo_toml         = { version = "0.16" }
clap               = { workspace = true, optional = true, features = ["derive", "wrap_help"] }
futures            = { version = "0.3" }
fxhash             = { workspace = true }
githuber           = { version = "0.4.3" }
once_cell          = { workspace = true }
parity-scale-codec = { workspace = true }
regex              = { version = "1.9" }
reqwest            = { workspace = true, features = ["json"] }
serde              = { workspace = true }
serde_json         = { workspace = true }
thiserror          = { workspace = true }
tokio              = { workspace = true, features = ["fs", "macros", "rt-multi-thread"] }
tokio-stream       = { version = "0.1" }
tokio-tungstenite  = { version = "0.20", features = ["rustls-tls-native-roots"] }
tracing            = { workspace = true }
# hack-ink
subalfred-util = { workspace = true }
subcryptor     = { workspace = true }
subhasher      = { workspace = true }
submetadatan   = { workspace = true, features = ["cmp"] }
subrpcer       = { workspace = true }
subruntimer    = { workspace = true, features = ["serde"] }
subspector     = { workspace = true }
substorager    = { workspace = true }
subversioner   = { workspace = true, features = ["serde"] }
