[package]
authors     = ["Xavier Lau <xavier@inv.cafe>"]
description = "Subalfred utilities."
edition     = "2021"
homepage    = "https://subalfred.hack.ink"
license     = "GPL-3.0"
name        = "subalfred-util"
readme      = "README.md"
repository  = "https://github.com/hack-ink/subalfred"
version     = "0.9.1"

[dev-dependencies]
tracing      = { workspace = true }
tracing-test = { version = "0.2" }
