[package]
authors.workspace    = true
description          = "Subalfred utilities."
edition.workspace    = true
homepage.workspace   = true
license.workspace    = true
name                 = "subalfred-util"
readme               = "README.md"
repository.workspace = true
version.workspace    = true

[dev-dependencies]
tracing      = { workspace = true }
tracing-test = { version = "0.2" }
