[package]
authors     = ["Xavier Lau <xavier@inv.cafe>"]
build       = "build.rs"
description = ""
edition     = "2021"
homepage    = "https://subalfred.hack.ink"
license     = "GPL-3.0"
name        = "subalfred-cli"
readme      = "README.md"
repository  = "https://github.com/hack-ink/subalfred"
version     = "0.1.0"

[badges]
maintenance = { status = "actively-developed" }

[build-dependencies]
# crates.io
vergen = { version = "7.0" }

[dependencies]
# crates.io
anyhow   = { version = "1.0" }
clap     = { version = "3.0", features = ["cargo", "derive"] }
executor = { package = "subalfred-executor", version = "0.1", path = "../executor" }
