[package]
authors     = ["Xavier Lau <xavier@inv.cafe>"]
description = ""
edition     = "2021"
homepage    = "https://subalfred.hack.ink"
license     = "GPL-3.0"
name        = "subalfred-executor"
readme      = "README.md"
repository  = "https://github.com/hack-ink/subalfred"
version     = "0.1.0"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
# crates.io
anyhow             = { version = "1.0" }
app_dirs2          = { version = "2.4" }
array-bytes        = { version = "1.5", optional = true }
async-std          = { version = "1.10", features = ["attributes"] }
cargo_toml         = { version = "0.11", optional = true }
clap               = { version = "3.1", features = ["cargo", "derive"] }
githuber           = { version = "0.3.0-alpha.1" }
once_cell          = { version = "1.10" }
parity-scale-codec = { version = "2.3", optional = true }
serde              = { version = "1.0" }
serde_json         = { version = "1.0", optional = true }
toml               = { version = "0.5" }
walkdir            = { version = "2.3", optional = true }
# hack-ink
subcryptor   = { version = "0.7", optional = true, path = "../../subcryptor" }
submetadatan = { version = "0.7", optional = true, path = "../../submetadatan" }
subrpcer     = { version = "0.7", optional = true, features = ["ureq-client"], path = "../../subrpcer" }

[features]
default = [
	# hack-ink
	"checker",
	"crypto",
	"node",
]

checker = [
	# crates.io
	"cargo_toml",
	"walkdir",
	# hack-ink
	"node",
]
crypto = [
	# crates.io
	"array-bytes",
	# hack-ink
	"subcryptor",
]
node = [
	# crates.io
	"parity-scale-codec",
	"serde_json",
	# hack-ink
	"submetadatan",
	"subrpcer",
]
