[package]
authors     = ["Xavier Lau <hi@xavier.zone>"]
description = "subrpcer-impl"
edition     = "2018"
homepage    = "https://subalfred.l2ust.world"
license     = "GPL-3.0"
name        = "subrpcer-impl"
readme      = "README.md"
repository  = "https://github.com/l2ust/subalfred"
version     = "0.1.2"

[lib]
proc-macro = true

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
proc-macro2 = { version = "1.0.29" }
quote       = { version = "1.0.9" }
syn         = { version = "1.0.76", features = ["full"] }
