[package]
authors     = ["Xavier Lau <c.estlavie@icloud.com>"]
description = "Minimal implementation of Substrate crypto."
edition     = "2021"
homepage    = "https://subcryptor.hack.ink"
license     = "GPL-3.0"
name        = "subcryptor"
readme      = "README.md"
repository  = "https://github.com/hack-ink/subalfred"
version     = "0.9.0-rc16"

[dependencies]
# crates.io
base58             = { version = "0.2" }
blake2-rfc         = { version = "0.2" }
parity-scale-codec = { version = "3.2", optional = true, features = ["derive"] }
ss58-registry      = { version = "1.34" }
thiserror          = { version = "1.0" }

[features]
codec = [
	# crates.io
	"parity-scale-codec",
]
