[package]
authors     = ["Xavier Lau <xavier@inv.cafe>"]
description = "subgrandpa"
edition     = "2021"
homepage    = "https://subalfred.hack.ink"
license     = "GPL-3.0"
name        = "subgrandpa"
readme      = "README.md"
repository  = "https://github.com/hack-ink/subalfred"
version     = "0.9.0-rc15"

[dependencies]
# crates.io
parity-scale-codec = { version = "3.2", optional = true, features = ["derive"] }
serde              = { version = "1.0", optional = true, features = ["derive"] }

[features]
codec = [
	# crates.io
	"parity-scale-codec",
]
