[package]
authors.workspace    = true
description          = "subgrandpa"
edition.workspace    = true
homepage.workspace   = true
license.workspace    = true
name                 = "subgrandpa"
readme               = "README.md"
repository.workspace = true
version.workspace    = true

[dependencies]
# crates.io
parity-scale-codec = { workspace = true, optional = true, features = ["derive"] }
serde              = { workspace = true, optional = true, features = ["derive"] }

[features]
codec = [
	# crates.io
	"parity-scale-codec",
]
