[package]
authors.workspace    = true
description          = "Minimal implementation of Substrate metadata."
edition.workspace    = true
homepage.workspace   = true
license.workspace    = true
name                 = "submetadatan"
readme               = "README.md"
repository.workspace = true
version.workspace    = true

[dependencies]
# crates.io
frame-metadata = { version = "15.1" }
scale-info     = { version = "2.7" }
thiserror      = { workspace = true }
